{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 118,
  "lineage": "b59219b0-9859-1783-590e-e6fd9d7058d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3f7be5ef385f040",
            "arn": "arn:aws:ec2:us-east-1:381492077515:elastic-ip/eipalloc-0d3f7be5ef385f040",
            "domain": "vpc",
            "id": "eipalloc-0d3f7be5ef385f040",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-81-171-253.compute-1.amazonaws.com",
            "public_ip": "54.81.171.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "n1co-eip1",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-eip1",
              "project": "n1co"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:internet-gateway/igw-0dc8dadabfb56a1c3",
            "id": "igw-0dc8dadabfb56a1c3",
            "owner_id": "381492077515",
            "tags": {
              "Name": "n1co-igw",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-igw",
              "project": "n1co"
            },
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3f7be5ef385f040",
            "association_id": "eipassoc-0d0e8267a4ce67965",
            "connectivity_type": "public",
            "id": "nat-01b33fddde4cd1328",
            "network_interface_id": "eni-069e411ddbc11aaf0",
            "private_ip": "10.0.11.52",
            "public_ip": "54.81.171.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bc8792bfc580002d",
            "tags": {
              "Name": "n1co-natgw1",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-natgw1",
              "project": "n1co"
            }
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:route-table/rtb-01389b9fc73304fc5",
            "id": "rtb-01389b9fc73304fc5",
            "owner_id": "381492077515",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b33fddde4cd1328",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n1co-rt-private",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-rt-private",
              "project": "n1co"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:route-table/rtb-0abe8e38e380f9f5f",
            "id": "rtb-0abe8e38e380f9f5f",
            "owner_id": "381492077515",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc8dadabfb56a1c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "n1co-rt-public",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-rt-public",
              "project": "n1co"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cidr_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea87543e3f32828c",
            "route_table_id": "rtb-01389b9fc73304fc5",
            "subnet_id": "subnet-0d8c2b108cc077eb7"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511e0722f6052059",
            "route_table_id": "rtb-01389b9fc73304fc5",
            "subnet_id": "subnet-0ace7c5485fdf5daa"
          },
          "dependencies": [
            "aws_eip.eip1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw1",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0682a0a4e69dbbf72",
            "route_table_id": "rtb-0abe8e38e380f9f5f",
            "subnet_id": "subnet-0bc8792bfc580002d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089f9b27e83d7daa2",
            "route_table_id": "rtb-0abe8e38e380f9f5f",
            "subnet_id": "subnet-02bb911ebfeb02a02"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:security-group/sg-0171f78eab188be77",
            "description": "Grupo de seguridad para EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0171f78eab188be77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_eks",
            "name_prefix": "",
            "owner_id": "381492077515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "n1co-eks-sg",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-eks-sg",
              "project": "n1co"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:security-group/sg-000d907c61fc7f2ea",
            "description": "Grupo de seguridad RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000d907c61fc7f2ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0171f78eab188be77"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_rds",
            "name_prefix": "",
            "owner_id": "381492077515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "n1co-sg-rds",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-sg-rds",
              "project": "n1co"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_eks",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:subnet/subnet-0ace7c5485fdf5daa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ace7c5485fdf5daa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492077515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n1co-private-subnet1",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-private-subnet1",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:subnet/subnet-0d8c2b108cc077eb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8c2b108cc077eb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492077515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n1co-private-subnet2",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-private-subnet2",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:subnet/subnet-0bc8792bfc580002d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc8792bfc580002d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492077515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n1co-public-subnet1",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-public-subnet1",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:subnet/subnet-02bb911ebfeb02a02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bb911ebfeb02a02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492077515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n1co-public-subnet2",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-public-subnet2",
              "kubernetes.io/cluster/n1co-cluster-n1co": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "n1co"
            },
            "vpc_id": "vpc-0a838ffe73e131a7a"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492077515:vpc/vpc-0a838ffe73e131a7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d123c7a39fb788b0",
            "default_route_table_id": "rtb-0936917ba7bf37f30",
            "default_security_group_id": "sg-0ed2afe72897974f7",
            "dhcp_options_id": "dopt-03f22c7d80ebf54f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a838ffe73e131a7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0936917ba7bf37f30",
            "owner_id": "381492077515",
            "tags": {
              "Name": "n1co-vpc",
              "project": "n1co"
            },
            "tags_all": {
              "Name": "n1co-vpc",
              "project": "n1co"
            }
          }
        }
      ]
    }
  ]
}